--- a/src/pages/shop/shop.css
+++ b/src/pages/shop/shop.css
@@ -16,7 +16,7 @@
     border-radius: 15px;
     width: 300px;
     height: 350px;
-    margin: 20px; /* Reduced margin here */
+    margin: 20px; 
     display: flex;
     flex-direction: column;
     justify-content: center;
