--- a/src/startpage/componentsSP/NavbarSP.css
+++ b/src/startpage/componentsSP/NavbarSP.css
@@ -1,172 +1,217 @@
 .navbar {
-    background: linear-gradient(90deg, rgba(227, 36, 97, 0.301) 0%, rgba(178, 22, 186) 100%);
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-  }
-  
-  .navbar-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80px;
-    max-width: 1500px;
-  }
-  
-  .navbar-logo {
-    color: #f9f9f9;
-    justify-self: start;
-    margin-left: 20px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
-    font-family: Arial, sans-serif; /* You can change the font family to your preference */
-    font-weight: bold; /* Adding boldness for emphasis */
-    letter-spacing: 1px; /* Adjust letter spacing for better readability */
+  background: linear-gradient(90deg, rgba(227, 36, 97, 0.301) 0%, rgba(178, 22, 186) 100%);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
 }
 
-  
-  .fa-typo3 {
-    margin-left: 0.5rem;
-    font-size: 1.8rem;
+.navbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px;
+  max-width: 1500px;
+}
+
+.navbar-logo {
+  color: #f9f9f9;
+  justify-self: start;
+  margin-left: 20px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  font-family: Arial, sans-serif; /* You can change the font family to your preference */
+  font-weight: bold; /* Adding boldness for emphasis */
+  letter-spacing: 1px; /* Adjust letter spacing for better readability */
+}
+
+
+.fa-typo3 {
+  margin-left: 0.5rem;
+  font-size: 1.8rem;
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  margin-top: 100px;
+  text-align: center;
+  width: 60vw;
+  margin-right: 2rem;
+}
+
+.nav-item {
+  margin-top: -90px;
+}
+
+.nav-links {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  height: 100%;
+  transition: all 0.2s ease-out;
+}
+
+.nav-links:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  color: #242424;
+  border-radius: 4px;
+  transition: all 0.2s ease-out;
+}
+
+.login-btn-container {
+  display: flex;
+  align-items: center;
+  margin-top: -60px;
+}
+
+
+
+.fa-bars {
+  color: #fff;
+}
+
+.nav-links-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .NavbarItems {
+    position: relative;
   }
-  
+
   .nav-menu {
     display: flex;
-    justify-content: flex-end;
-    list-style: none;
-    margin-top: 100px;
-    text-align: center;
-    width: 60vw;
-    margin-right: 2rem;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 80px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
   }
-  
-  .nav-item {
-    margin-top: -90px;
-  }
-  
-  .nav-links {
-    color: #fff;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    padding: 0.5rem 1rem;
-    height: 100%;
-    transition: all 0.2s ease-out;
-  }
-  
-  .nav-links:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-    color: #242424;
-    border-radius: 4px;
-    transition: all 0.2s ease-out;
-  }
-  
-  .login-btn-container {
-    display: flex;
-    align-items: center;
-    margin-top: -60px;
-  }
-  
 
-  
-  .fa-bars {
-    color: #fff;
+  .nav-menu.active {
+    background: #242222;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
   }
-  
-  .nav-links-mobile {
-    display: none;
+
+  .nav-links {
+    text-align: center;
+    padding: 2rem;
+    width: 100%;
+    display: table;
   }
-  
+
+  .nav-links:hover {
+    background-color: #fff;
+    color: #242424;
+    border-radius: 0;
+  }
+
+  .navbar-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%, 50%);
+  }
+
   .menu-icon {
-    display: none;
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
   }
-  
-  @media screen and (max-width: 960px) {
-    .NavbarItems {
-      position: relative;
-    }
-  
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      height: 90vh;
-      position: absolute;
-      top: 80px;
-      left: -100%;
-      opacity: 1;
-      transition: all 0.5s ease;
-    }
-  
-    .nav-menu.active {
-      background: #242222;
-      left: 0;
-      opacity: 1;
-      transition: all 0.5s ease;
-      z-index: 1;
-    }
-  
-    .nav-links {
-      text-align: center;
-      padding: 2rem;
-      width: 100%;
-      display: table;
-    }
-  
-    .nav-links:hover {
-      background-color: #fff;
-      color: #242424;
-      border-radius: 0;
-    }
-  
-    .navbar-logo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translate(25%, 50%);
-    }
-  
-    .menu-icon {
-      display: block;
-      position: absolute;
-      top: 0;
-      right: 0;
-      transform: translate(-100%, 60%);
-      font-size: 1.8rem;
-      cursor: pointer;
-    }
-  
-    .fa-times {
-      color: #fff;
-      font-size: 2rem;
-    }
-  
-    .nav-links-mobile {
-      display: block;
-      text-align: center;
-      margin: 2rem auto;
-      border-radius: 4px;
-      width: 80%;
-      text-decoration: none;
-      font-size: 1.5rem;
-      background-color: transparent;
-      color: #fff;
-      padding: 14px 20px;
-      border: 1px solid #fff;
-      transition: all 0.3s ease-out;
-    }
-  
-    .nav-links-mobile:hover {
-      background: #fff;
-      color: #242424;
-      transition: 250ms;
-    }
+
+  .fa-times {
+    color: #fff;
+    font-size: 2rem;
   }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    margin: 2rem auto;
+    border-radius: 4px;
+    width: 80%;
+    text-decoration: none;
+    font-size: 1.5rem;
+    background-color: transparent;
+    color: #fff;
+    padding: 14px 20px;
+    border: 1px solid #fff;
+    transition: all 0.3s ease-out;
+  }
+
+  .nav-links-mobile:hover {
+    background: #fff;
+    color: #242424;
+    transition: 250ms;
+  }
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: #ffffff; /* Background color */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Box shadow for depth */
+  padding: 25px; /* Padding around dropdown items */
+  border-radius: 8px ; /* Rounded corners */
+  font-family: Arial, sans-serif; /* Font family */
+  z-index: 1000; /* Ensure the dropdown appears above other elements */
+  list-style-type: none; /* Remove default list styling */
+}
+
+.dropdown-item {
+  margin-bottom: 12px;
+   /* Margin between dropdown items */
+}
+
+.dropdown-link {
+  text-decoration: none; /* Remove underline */
+  color: #333333; /* Text color */
+  transition: color 0.3s; /* Smooth transition on color change */
+}
+
+.dropdown-link:hover {
+  color: #007bff; /* Text color on hover */
+}
+
+.nav-item:hover .dropdown-menu {
+  display: block;
+  animation: slideDown 0.3s ease;
+  /* Slide-down animation */
+}
+
+/* Slide-down animation */
+@keyframes slideDown {
+  from {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
