--- a/src/header.css
+++ b/src/header.css
@@ -1,7 +1,7 @@
 /* header.css */
 
 header {
-    background-color: #333;
+    background-color: #b10854;
     color: #fff;
     padding: -20px;
     text-align: center;
